# Iris-Flower-Classification-

./: Dockerfile  Iris_Classification_Project.ipynb  README.md  car_price_prediction.ipynb  docker-compose.yml  interview_prep.md  iris_log_reg_model.pkl  iris_test_predictions.csv  pyproject.toml  requirements.txt  vercel.json
.github/workflows/: mlops.yml
frontend/: app.js  index.html  style.css
src/: api.py  inference.py  schemas.py  train.py
tests/: test_api.py  test_model.py
