[project]
name = "iris-classification"
version = "0.1.0"
description = "Iris Flower Classification API"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi==0.110.0",
    "uvicorn==0.27.1",
    "scikit-learn==1.3.2",
    "pandas==2.2.1",
    "pydantic==2.6.3",
    "pytest==8.0.2",
    "httpx==0.27.0"
]
